--- a/server/.env
+++ b/server/.env
@@ -1,5 +1,5 @@
 MONGODB_URI="mongodb+srv://jobSter:jobSTER4321@cluster0.vsj1fjb.mongodb.net"
-CLERK_WEBHOOK_SECRET=""
+CLERK_WEBHOOK_SECRET="whsec_6ckACcVfNVWDsYoYSXnWL5T+/NRshT8e"
 
 
 
